VPC.tf
resource "aws_vpc" "maven_project_vpc" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "Maven-VPC"
  }
}
